Fix search box styling on mobile

--- a/src/app/search/search-filter.scss
+++ b/src/app/search/search-filter.scss
@@ -72,6 +72,8 @@
         height: 100%;
         padding: 0 0 0 8px;
         margin: 0;
+        border-radius: 0;
+        border-bottom: 1px solid #999;
       }
 
       .filter-input {
